syntax = "proto3";


import "user.proto";
import "google/protobuf/timestamp.proto";

package auth;
option go_package = "auth-service/internal/grpc/proto/auth";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string session_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp accessTokenExpiresAt = 5;
  google.protobuf.Timestamp refreshTokenExpiresAt = 6;
}
